force-app/main/default/objects/Account_Setting__c/Account_Setting__c.object-meta.xml
<CustomObject>
    <label>Account Setting</label>
    <nameField>
        <label>Account Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>