force-app/main/default/objects/Account_Setting__c/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Need Barcode labels in Products</inlineHelpText>
    <label>Bar Code?</label>
    <type>Checkbox</type>
</CustomField>