force-app/main/default/objects/Account_Setting__c/fields/Distribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Fee__c</fullName>
    <label>Distribution Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>