force-app/main/default/objects/Account_Setting__c/fields/Hold__c.field-meta.xml
<CustomField>
    <fullName>Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will block all Order transactions in Salesforce.</inlineHelpText>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>