force-app/main/default/objects/Account_Setting__c/fields/Listing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fee__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Listing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>