force-app/main/default/objects/Account_Setting__c/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <label>Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Level</valueSetName>
    </valueSet>
</CustomField>