force-app/main/default/objects/Account_Setting__c/fields/Mthly_IB__c.field-meta.xml
<CustomField>
    <fullName>Mthly_IB__c</fullName>
    <label>Mthly IB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>