force-app/main/default/objects/Account_Setting__c/fields/Mthly_OB__c.field-meta.xml
<CustomField>
    <fullName>Mthly_OB__c</fullName>
    <label>Mthly OB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>