force-app/main/default/objects/Account_Setting__c/fields/Off_Board_Date__c.field-meta.xml
<CustomField>
    <fullName>Off_Board_Date__c</fullName>
    <label>Off Board Date</label>
    <type>Date</type>
</CustomField>