force-app/main/default/objects/Account_Setting__c/fields/On_Board_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Board_Date__c</fullName>
    <label>On Board Date</label>
    <type>Date</type>
</CustomField>