force-app/main/default/objects/Account_Setting__c/fields/Platform_Level__c.field-meta.xml
<CustomField>
    <fullName>Platform_Level__c</fullName>
    <label>Platform Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>