force-app/main/default/objects/Account_Setting__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Need QR label in Products</inlineHelpText>
    <label>QR Code?</label>
    <type>Checkbox</type>
</CustomField>