force-app/main/default/objects/Account_Setting__c/fields/Tax_Note__c.field-meta.xml
<CustomField>
    <fullName>Tax_Note__c</fullName>
    <label>Tax Note</label>
    <length>50</length>
    <type>Text</type>
</CustomField>