force-app/main/default/objects/Account_Setting__c/fields/Upload_COA__c.field-meta.xml
<CustomField>
    <fullName>Upload_COA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload COA</label>
    <type>Checkbox</type>
</CustomField>